--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ baseurl: https://xdavidchen.com
 languageCode: en-us
 theme: hugo-theme-stack
 paginate: 5
-title: xdavidchen
+title: xdavidchen|personal blog
 
 # Change it to your Disqus shortname before using
 disqusShortname: hugo-theme-stack
