--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ params:
         avatar:
             enabled: true
             local: true
-            src: img/avatar.jpg
+            src: img/avatar1.jpg
 
     article:
         math: false
